--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
-    "npm": "^5.8.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
